<resources>
    <string name="app_name">MyNotes</string>
    <string name="add_note_btn">Добавить</string>
    <string name="start_label">Что использовать?</string>
    <string name="start_room_btn">ROOM</string>
    <string name="title">Заметки</string>
    <string name="toast_enter_name">Введите имя заметки</string>
    <string name="start_firebase_btn">Firebase</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="start_login_btn">Login</string>
    <string name="toast_wrong_enter">Введите почту и пароль</string>

</resources>